fix : Remove [overflow: "hidden"] property on the upload-button in the Photo Page, because it is hiding the button when a picture is too tall

--- a/assets/style.css
+++ b/assets/style.css
@@ -461,7 +461,6 @@ body {
 
     #upload-button {
         position: relative;
-        overflow: hidden;
         display: inline-block;
         margin: 10px auto;
     }
@@ -974,7 +973,6 @@ body {
 
     #upload-button {
         position: relative;
-        overflow: hidden;
         display: inline-block;
         margin: 10px auto;
     }
@@ -1473,9 +1471,8 @@ body {
 
     #upload-button {
         position: relative;
-        overflow: hidden;
         display: inline-block;
-        margin: 10px auto;
+        margin: 30px auto;
     }
 
     .btn-upload {
